test/type/fail/var_assign_incompatible_type.j
class A{
  Void main() {
    String a;
    a = 5;
  }
}
